; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/isa/extr_sscape.c_free_dmabuf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/isa/extr_sscape.c_free_dmabuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_dma_buffer = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_dma_buffer*)* @free_dmabuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_dmabuf(%struct.snd_dma_buffer* %0) #0 {
  %2 = alloca %struct.snd_dma_buffer*, align 8
  store %struct.snd_dma_buffer* %0, %struct.snd_dma_buffer** %2, align 8
  %3 = load %struct.snd_dma_buffer*, %struct.snd_dma_buffer** %2, align 8
  %4 = icmp ne %struct.snd_dma_buffer* %3, null
  br i1 %4, label %5, label %13

5:                                                ; preds = %1
  %6 = load %struct.snd_dma_buffer*, %struct.snd_dma_buffer** %2, align 8
  %7 = getelementptr inbounds %struct.snd_dma_buffer, %struct.snd_dma_buffer* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %5
  %11 = load %struct.snd_dma_buffer*, %struct.snd_dma_buffer** %2, align 8
  %12 = call i32 @snd_dma_free_pages(%struct.snd_dma_buffer* %11)
  br label %13

13:                                               ; preds = %10, %5, %1
  ret void
}

declare dso_local i32 @snd_dma_free_pages(%struct.snd_dma_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
